--- a/examples/fund.ipynb
+++ b/examples/fund.ipynb
@@ -74,11 +74,11 @@
        "基金简称                                        招商中证白酒指数(LOF)A\n",
        "FTYPE                                               指数型-股票\n",
        "FEATURE                                    020,050,051,054\n",
-       "BFUNDTYPE                                              001\n",
+       "BFUNDTYPE                                              1.0\n",
        "                                      ...                 \n",
        "HSGRT                                                0.10%\n",
        "BENCH                 中证白酒指数收益率*95%+金融机构人民币活期存款基准利率(税后)*5%\n",
-       "FINSALES                                                 0\n",
+       "FINSALES                                               0.0\n",
        "INVESTMENTIDEAR                                         --\n",
        "INVESTMENTIDEARIMG                                      --\n",
        "Length: 118, dtype: object"
@@ -108,32 +108,32 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "processing 161725: 100%|██████████| 2/2 [00:02<00:00,  1.32s/it]"
+      "processing 005827: 100%|██████████| 2/2 [00:00<00:00,  7.01it/s]"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "     基金代码            基金简称   FTYPE          FEATURE BFUNDTYPE FUNDTYPE    涨跌幅  \\\n",
-       "0  005827       易方达蓝筹精选混合  混合型-偏股          211,701       002      002  -1.80   \n",
-       "1  161725  招商中证白酒指数(LOF)A  指数型-股票  020,050,051,054       001      001  -2.29   \n",
+       "     基金代码            基金简称   FTYPE          FEATURE  BFUNDTYPE  FUNDTYPE   涨跌幅  \\\n",
+       "0  161725  招商中证白酒指数(LOF)A  指数型-股票  020,050,051,054        1.0       1.0 -3.60   \n",
+       "1  005827       易方达蓝筹精选混合  混合型-偏股          211,701        2.0       2.0 -6.04   \n",
        "\n",
        "     最新净值    LJJZ  SGZT  ... MCOVERDETAIL  \\\n",
-       "0  2.8610  2.8610   限大额  ...           --   \n",
-       "1  1.4329  3.0640  开放申购  ...           --   \n",
+       "0  1.2813  2.9124  开放申购  ...           --   \n",
+       "1  2.5192  2.5192   限大额  ...           --   \n",
        "\n",
-       "                                     简介 TRKERROR ESTDIFF  HRGRT  HSGRT  \\\n",
-       "0  明星消费基金经理另一力作，A+H股同步布局，价值投资典范，适合长期持有。       --  0.1518  0.12%  0.15%   \n",
-       "1     产品特色：布局白酒领域的指数基金，历史业绩优秀，外资偏爱白酒板块。   0.1548  0.0473  0.80%  0.10%   \n",
+       "                                     简介 TRKERROR  ESTDIFF  HRGRT  HSGRT  \\\n",
+       "0     产品特色：布局白酒领域的指数基金，历史业绩优秀，外资偏爱白酒板块。   0.1576   0.0485  0.80%  0.10%   \n",
+       "1  明星消费基金经理另一力作，A+H股同步布局，价值投资典范，适合长期持有。       --   0.1828  0.12%  0.15%   \n",
        "\n",
-       "                                          BENCH FINSALES INVESTMENTIDEAR  \\\n",
-       "0  沪深300指数收益率×45%+中证港股通综合指数收益率×35%+中债总指数收益率×20%        0              --   \n",
-       "1          中证白酒指数收益率*95%+金融机构人民币活期存款基准利率(税后)*5%        0              --   \n",
+       "                                          BENCH  FINSALES INVESTMENTIDEAR  \\\n",
+       "0          中证白酒指数收益率*95%+金融机构人民币活期存款基准利率(税后)*5%       0.0              --   \n",
+       "1  沪深300指数收益率×45%+中证港股通综合指数收益率×35%+中债总指数收益率×20%       0.0              --   \n",
        "\n",
-       "  INVESTMENTIDEARIMG  \n",
-       "0                 --  \n",
-       "1                 --  \n",
+       "   INVESTMENTIDEARIMG  \n",
+       "0                  --  \n",
+       "1                  --  \n",
        "\n",
        "[2 rows x 118 columns]"
       ],
@@ -182,49 +182,49 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>005827</td>\n",
-       "      <td>易方达蓝筹精选混合</td>\n",
-       "      <td>混合型-偏股</td>\n",
-       "      <td>211,701</td>\n",
-       "      <td>002</td>\n",
-       "      <td>002</td>\n",
-       "      <td>-1.80</td>\n",
-       "      <td>2.8610</td>\n",
-       "      <td>2.8610</td>\n",
-       "      <td>限大额</td>\n",
+       "      <td>161725</td>\n",
+       "      <td>招商中证白酒指数(LOF)A</td>\n",
+       "      <td>指数型-股票</td>\n",
+       "      <td>020,050,051,054</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-3.60</td>\n",
+       "      <td>1.2813</td>\n",
+       "      <td>2.9124</td>\n",
+       "      <td>开放申购</td>\n",
        "      <td>...</td>\n",
        "      <td>--</td>\n",
-       "      <td>明星消费基金经理另一力作，A+H股同步布局，价值投资典范，适合长期持有。</td>\n",
-       "      <td>--</td>\n",
-       "      <td>0.1518</td>\n",
-       "      <td>0.12%</td>\n",
-       "      <td>0.15%</td>\n",
-       "      <td>沪深300指数收益率×45%+中证港股通综合指数收益率×35%+中债总指数收益率×20%</td>\n",
-       "      <td>0</td>\n",
+       "      <td>产品特色：布局白酒领域的指数基金，历史业绩优秀，外资偏爱白酒板块。</td>\n",
+       "      <td>0.1576</td>\n",
+       "      <td>0.0485</td>\n",
+       "      <td>0.80%</td>\n",
+       "      <td>0.10%</td>\n",
+       "      <td>中证白酒指数收益率*95%+金融机构人民币活期存款基准利率(税后)*5%</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>161725</td>\n",
-       "      <td>招商中证白酒指数(LOF)A</td>\n",
-       "      <td>指数型-股票</td>\n",
-       "      <td>020,050,051,054</td>\n",
-       "      <td>001</td>\n",
-       "      <td>001</td>\n",
-       "      <td>-2.29</td>\n",
-       "      <td>1.4329</td>\n",
-       "      <td>3.0640</td>\n",
-       "      <td>开放申购</td>\n",
+       "      <td>005827</td>\n",
+       "      <td>易方达蓝筹精选混合</td>\n",
+       "      <td>混合型-偏股</td>\n",
+       "      <td>211,701</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-6.04</td>\n",
+       "      <td>2.5192</td>\n",
+       "      <td>2.5192</td>\n",
+       "      <td>限大额</td>\n",
        "      <td>...</td>\n",
        "      <td>--</td>\n",
-       "      <td>产品特色：布局白酒领域的指数基金，历史业绩优秀，外资偏爱白酒板块。</td>\n",
-       "      <td>0.1548</td>\n",
-       "      <td>0.0473</td>\n",
-       "      <td>0.80%</td>\n",
-       "      <td>0.10%</td>\n",
-       "      <td>中证白酒指数收益率*95%+金融机构人民币活期存款基准利率(税后)*5%</td>\n",
-       "      <td>0</td>\n",
+       "      <td>明星消费基金经理另一力作，A+H股同步布局，价值投资典范，适合长期持有。</td>\n",
+       "      <td>--</td>\n",
+       "      <td>0.1828</td>\n",
+       "      <td>0.12%</td>\n",
+       "      <td>0.15%</td>\n",
+       "      <td>沪深300指数收益率×45%+中证港股通综合指数收益率×35%+中债总指数收益率×20%</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
        "    </tr>\n",
@@ -255,23 +255,30 @@
    ],
    "outputs": [
     {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "processing 005827: 100%|██████████| 2/2 [00:00<00:00,  2.78it/s]\n"
+     ]
+    },
+    {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
        "             日期    单位净值    累计净值     涨跌幅\n",
-       "0    2021-07-23  1.4329  3.0640   -2.29\n",
-       "1    2021-07-22  1.4665  3.0976   -1.95\n",
-       "2    2021-07-21  1.4956  3.1267   -0.08\n",
-       "3    2021-07-20  1.4968  3.1279    0.07\n",
-       "4    2021-07-19  1.4957  3.1268    0.88\n",
+       "0    2021-07-27  1.2813  2.9124    -3.6\n",
+       "1    2021-07-26  1.3292  2.9603   -7.24\n",
+       "2    2021-07-23  1.4329  3.0640   -2.29\n",
+       "3    2021-07-22  1.4665  3.0976   -1.95\n",
+       "4    2021-07-21  1.4956  3.1267   -0.08\n",
        "...         ...     ...     ...     ...\n",
-       "1498 2015-06-08  1.0380  1.0380  2.5692\n",
-       "1499 2015-06-05  1.0120  1.0120  1.5045\n",
-       "1500 2015-06-04  0.9970  0.9970      --\n",
-       "1501 2015-05-29  0.9950  0.9950      --\n",
-       "1502 2015-05-27  1.0000  1.0000      --\n",
+       "1500 2015-06-08  1.0380  1.0380  2.5692\n",
+       "1501 2015-06-05  1.0120  1.0120  1.5045\n",
+       "1502 2015-06-04  0.9970  0.9970      --\n",
+       "1503 2015-05-29  0.9950  0.9950      --\n",
+       "1504 2015-05-27  1.0000  1.0000      --\n",
        "\n",
-       "[1503 rows x 4 columns]"
+       "[1505 rows x 4 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -301,38 +308,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2021-07-27</td>\n",
+       "      <td>1.2813</td>\n",
+       "      <td>2.9124</td>\n",
+       "      <td>-3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-07-26</td>\n",
+       "      <td>1.3292</td>\n",
+       "      <td>2.9603</td>\n",
+       "      <td>-7.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>2021-07-23</td>\n",
        "      <td>1.4329</td>\n",
        "      <td>3.0640</td>\n",
        "      <td>-2.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>3</th>\n",
        "      <td>2021-07-22</td>\n",
        "      <td>1.4665</td>\n",
        "      <td>3.0976</td>\n",
        "      <td>-1.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>2021-07-21</td>\n",
        "      <td>1.4956</td>\n",
        "      <td>3.1267</td>\n",
        "      <td>-0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2021-07-20</td>\n",
-       "      <td>1.4968</td>\n",
-       "      <td>3.1279</td>\n",
-       "      <td>0.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2021-07-19</td>\n",
-       "      <td>1.4957</td>\n",
-       "      <td>3.1268</td>\n",
-       "      <td>0.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -342,35 +349,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1498</th>\n",
+       "      <th>1500</th>\n",
        "      <td>2015-06-08</td>\n",
        "      <td>1.0380</td>\n",
        "      <td>1.0380</td>\n",
        "      <td>2.5692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1499</th>\n",
+       "      <th>1501</th>\n",
        "      <td>2015-06-05</td>\n",
        "      <td>1.0120</td>\n",
        "      <td>1.0120</td>\n",
        "      <td>1.5045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1500</th>\n",
+       "      <th>1502</th>\n",
        "      <td>2015-06-04</td>\n",
        "      <td>0.9970</td>\n",
        "      <td>0.9970</td>\n",
        "      <td>--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1501</th>\n",
+       "      <th>1503</th>\n",
        "      <td>2015-05-29</td>\n",
        "      <td>0.9950</td>\n",
        "      <td>0.9950</td>\n",
        "      <td>--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1502</th>\n",
+       "      <th>1504</th>\n",
        "      <td>2015-05-27</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>1.0000</td>\n",
@@ -378,7 +385,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1503 rows × 4 columns</p>\n",
+       "<p>1505 rows × 4 columns</p>\n",
        "</div>"
       ]
      },
@@ -407,8 +414,8 @@
      "data": {
       "text/plain": [
        "     基金代码              名称  估算涨跌幅              估算时间\n",
-       "0  161725  招商中证白酒指数(LOF)A  -2.30  2021-07-23 15:00\n",
-       "1  005827       易方达蓝筹精选混合  -1.68  2021-07-23 15:00"
+       "0  161725  招商中证白酒指数(LOF)A  -3.74  2021-07-27 15:00\n",
+       "1  005827       易方达蓝筹精选混合  -5.87  2021-07-27 15:00"
       ],
       "text/html": [
        "<div>\n",
@@ -440,15 +447,15 @@
        "      <th>0</th>\n",
        "      <td>161725</td>\n",
        "      <td>招商中证白酒指数(LOF)A</td>\n",
-       "      <td>-2.30</td>\n",
-       "      <td>2021-07-23 15:00</td>\n",
+       "      <td>-3.74</td>\n",
+       "      <td>2021-07-27 15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>005827</td>\n",
        "      <td>易方达蓝筹精选混合</td>\n",
-       "      <td>-1.68</td>\n",
-       "      <td>2021-07-23 15:00</td>\n",
+       "      <td>-5.87</td>\n",
+       "      <td>2021-07-27 15:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -483,14 +490,14 @@
        "      基金代码              行业名称   持仓比例        公布日期              市值\n",
        "0   161725               制造业  93.07  2021-06-30  6492580.019556\n",
        "1   161725               金融业   0.01  2021-06-30      485.060688\n",
-       "2   161725          农、林、牧、渔业      0  2021-06-30        0.585078\n",
-       "3   161725  电力、热力、燃气及水生产和供应业      0  2021-06-30        1.302039\n",
-       "4   161725               建筑业      0  2021-06-30        2.537137\n",
-       "5   161725            批发和零售业      0  2021-06-30        5.888394\n",
-       "6   161725   信息传输、软件和信息技术服务业      0  2021-06-30      157.037536\n",
-       "7   161725     水利、环境和公共设施管理业      0  2021-06-30        4.443833\n",
-       "8   161725                教育      0  2021-06-30        1.626203\n",
-       "9   161725        科学研究和技术服务业      0  2021-06-30        48.30805\n",
+       "2   161725          农、林、牧、渔业    0.0  2021-06-30        0.585078\n",
+       "3   161725  电力、热力、燃气及水生产和供应业    0.0  2021-06-30        1.302039\n",
+       "4   161725               建筑业    0.0  2021-06-30        2.537137\n",
+       "5   161725            批发和零售业    0.0  2021-06-30        5.888394\n",
+       "6   161725   信息传输、软件和信息技术服务业    0.0  2021-06-30      157.037536\n",
+       "7   161725     水利、环境和公共设施管理业    0.0  2021-06-30        4.443833\n",
+       "8   161725                教育    0.0  2021-06-30        1.626203\n",
+       "9   161725        科学研究和技术服务业    0.0  2021-06-30        48.30805\n",
        "10  161725               采矿业     --  2021-06-30              --\n",
        "11  161725       交通运输、仓储和邮政业     --  2021-06-30              --\n",
        "12  161725            住宿和餐饮业     --  2021-06-30              --\n",
@@ -549,7 +556,7 @@
        "      <th>2</th>\n",
        "      <td>161725</td>\n",
        "      <td>农、林、牧、渔业</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>0.585078</td>\n",
        "    </tr>\n",
@@ -557,7 +564,7 @@
        "      <th>3</th>\n",
        "      <td>161725</td>\n",
        "      <td>电力、热力、燃气及水生产和供应业</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>1.302039</td>\n",
        "    </tr>\n",
@@ -565,7 +572,7 @@
        "      <th>4</th>\n",
        "      <td>161725</td>\n",
        "      <td>建筑业</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>2.537137</td>\n",
        "    </tr>\n",
@@ -573,7 +580,7 @@
        "      <th>5</th>\n",
        "      <td>161725</td>\n",
        "      <td>批发和零售业</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>5.888394</td>\n",
        "    </tr>\n",
@@ -581,7 +588,7 @@
        "      <th>6</th>\n",
        "      <td>161725</td>\n",
        "      <td>信息传输、软件和信息技术服务业</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>157.037536</td>\n",
        "    </tr>\n",
@@ -589,7 +596,7 @@
        "      <th>7</th>\n",
        "      <td>161725</td>\n",
        "      <td>水利、环境和公共设施管理业</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>4.443833</td>\n",
        "    </tr>\n",
@@ -597,7 +604,7 @@
        "      <th>8</th>\n",
        "      <td>161725</td>\n",
        "      <td>教育</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>1.626203</td>\n",
        "    </tr>\n",
@@ -605,7 +612,7 @@
        "      <th>9</th>\n",
        "      <td>161725</td>\n",
        "      <td>科学研究和技术服务业</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>48.30805</td>\n",
        "    </tr>\n",
