--- a/examples/fund.ipynb
+++ b/examples/fund.ipynb
@@ -74,11 +74,11 @@
        "基金简称                                        招商中证白酒指数(LOF)A\n",
        "FTYPE                                               指数型-股票\n",
        "FEATURE                                    020,050,051,054\n",
-       "BFUNDTYPE                                              1.0\n",
+       "BFUNDTYPE                                                1\n",
        "                                      ...                 \n",
        "HSGRT                                                0.10%\n",
        "BENCH                 中证白酒指数收益率*95%+金融机构人民币活期存款基准利率(税后)*5%\n",
-       "FINSALES                                               0.0\n",
+       "FINSALES                                                 0\n",
        "INVESTMENTIDEAR                                         --\n",
        "INVESTMENTIDEARIMG                                      --\n",
        "Length: 118, dtype: object"
@@ -108,7 +108,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "processing 005827: 100%|██████████| 2/2 [00:00<00:00,  7.01it/s]"
+      "processing 005827: 100%|██████████| 2/2 [00:00<00:00,  6.77it/s]"
      ]
     },
     {
@@ -116,20 +116,20 @@
      "data": {
       "text/plain": [
        "     基金代码            基金简称   FTYPE          FEATURE  BFUNDTYPE  FUNDTYPE   涨跌幅  \\\n",
-       "0  161725  招商中证白酒指数(LOF)A  指数型-股票  020,050,051,054        1.0       1.0 -3.60   \n",
-       "1  005827       易方达蓝筹精选混合  混合型-偏股          211,701        2.0       2.0 -6.04   \n",
+       "0  161725  招商中证白酒指数(LOF)A  指数型-股票  020,050,051,054          1         1 -6.03   \n",
+       "1  005827       易方达蓝筹精选混合  混合型-偏股          211,701          2         2 -2.98   \n",
        "\n",
        "     最新净值    LJJZ  SGZT  ... MCOVERDETAIL  \\\n",
-       "0  1.2813  2.9124  开放申购  ...           --   \n",
-       "1  2.5192  2.5192   限大额  ...           --   \n",
+       "0  1.1959  2.8270  开放申购  ...           --   \n",
+       "1  2.4967  2.4967   限大额  ...           --   \n",
        "\n",
        "                                     简介 TRKERROR  ESTDIFF  HRGRT  HSGRT  \\\n",
-       "0     产品特色：布局白酒领域的指数基金，历史业绩优秀，外资偏爱白酒板块。   0.1576   0.0485  0.80%  0.10%   \n",
-       "1  明星消费基金经理另一力作，A+H股同步布局，价值投资典范，适合长期持有。       --   0.1828  0.12%  0.15%   \n",
+       "0     产品特色：布局白酒领域的指数基金，历史业绩优秀，外资偏爱白酒板块。   0.1604   0.0560  0.80%  0.10%   \n",
+       "1  明星消费基金经理另一力作，A+H股同步布局，价值投资典范，适合长期持有。       --   0.2723  0.12%  0.15%   \n",
        "\n",
        "                                          BENCH  FINSALES INVESTMENTIDEAR  \\\n",
-       "0          中证白酒指数收益率*95%+金融机构人民币活期存款基准利率(税后)*5%       0.0              --   \n",
-       "1  沪深300指数收益率×45%+中证港股通综合指数收益率×35%+中债总指数收益率×20%       0.0              --   \n",
+       "0          中证白酒指数收益率*95%+金融机构人民币活期存款基准利率(税后)*5%         0              --   \n",
+       "1  沪深300指数收益率×45%+中证港股通综合指数收益率×35%+中债总指数收益率×20%         0              --   \n",
        "\n",
        "   INVESTMENTIDEARIMG  \n",
        "0                  --  \n",
@@ -186,21 +186,21 @@
        "      <td>招商中证白酒指数(LOF)A</td>\n",
        "      <td>指数型-股票</td>\n",
        "      <td>020,050,051,054</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.60</td>\n",
-       "      <td>1.2813</td>\n",
-       "      <td>2.9124</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-6.03</td>\n",
+       "      <td>1.1959</td>\n",
+       "      <td>2.8270</td>\n",
        "      <td>开放申购</td>\n",
        "      <td>...</td>\n",
        "      <td>--</td>\n",
        "      <td>产品特色：布局白酒领域的指数基金，历史业绩优秀，外资偏爱白酒板块。</td>\n",
-       "      <td>0.1576</td>\n",
-       "      <td>0.0485</td>\n",
+       "      <td>0.1604</td>\n",
+       "      <td>0.0560</td>\n",
        "      <td>0.80%</td>\n",
        "      <td>0.10%</td>\n",
        "      <td>中证白酒指数收益率*95%+金融机构人民币活期存款基准利率(税后)*5%</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
        "    </tr>\n",
@@ -210,21 +210,21 @@
        "      <td>易方达蓝筹精选混合</td>\n",
        "      <td>混合型-偏股</td>\n",
        "      <td>211,701</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-6.04</td>\n",
-       "      <td>2.5192</td>\n",
-       "      <td>2.5192</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-2.98</td>\n",
+       "      <td>2.4967</td>\n",
+       "      <td>2.4967</td>\n",
        "      <td>限大额</td>\n",
        "      <td>...</td>\n",
        "      <td>--</td>\n",
        "      <td>明星消费基金经理另一力作，A+H股同步布局，价值投资典范，适合长期持有。</td>\n",
        "      <td>--</td>\n",
-       "      <td>0.1828</td>\n",
+       "      <td>0.2723</td>\n",
        "      <td>0.12%</td>\n",
        "      <td>0.15%</td>\n",
        "      <td>沪深300指数收益率×45%+中证港股通综合指数收益率×35%+中债总指数收益率×20%</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
        "    </tr>\n",
@@ -258,7 +258,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "processing 005827: 100%|██████████| 2/2 [00:00<00:00,  2.78it/s]\n"
+      "processing 005827: 100%|██████████| 2/2 [00:00<00:00,  2.25it/s]\n"
      ]
     },
     {
@@ -266,19 +266,19 @@
      "data": {
       "text/plain": [
        "             日期    单位净值    累计净值     涨跌幅\n",
-       "0    2021-07-27  1.2813  2.9124    -3.6\n",
-       "1    2021-07-26  1.3292  2.9603   -7.24\n",
-       "2    2021-07-23  1.4329  3.0640   -2.29\n",
-       "3    2021-07-22  1.4665  3.0976   -1.95\n",
-       "4    2021-07-21  1.4956  3.1267   -0.08\n",
+       "0    2021-07-30  1.1959  2.8270   -6.03\n",
+       "1    2021-07-29  1.2726  2.9037   -1.52\n",
+       "2    2021-07-28  1.2922  2.9233    0.85\n",
+       "3    2021-07-27  1.2813  2.9124    -3.6\n",
+       "4    2021-07-26  1.3292  2.9603   -7.24\n",
        "...         ...     ...     ...     ...\n",
-       "1500 2015-06-08  1.0380  1.0380  2.5692\n",
-       "1501 2015-06-05  1.0120  1.0120  1.5045\n",
-       "1502 2015-06-04  0.9970  0.9970      --\n",
-       "1503 2015-05-29  0.9950  0.9950      --\n",
-       "1504 2015-05-27  1.0000  1.0000      --\n",
+       "1503 2015-06-08  1.0380  1.0380  2.5692\n",
+       "1504 2015-06-05  1.0120  1.0120  1.5045\n",
+       "1505 2015-06-04  0.9970  0.9970      --\n",
+       "1506 2015-05-29  0.9950  0.9950      --\n",
+       "1507 2015-05-27  1.0000  1.0000      --\n",
        "\n",
-       "[1505 rows x 4 columns]"
+       "[1508 rows x 4 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -308,38 +308,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>1.1959</td>\n",
+       "      <td>2.8270</td>\n",
+       "      <td>-6.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-07-29</td>\n",
+       "      <td>1.2726</td>\n",
+       "      <td>2.9037</td>\n",
+       "      <td>-1.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-07-28</td>\n",
+       "      <td>1.2922</td>\n",
+       "      <td>2.9233</td>\n",
+       "      <td>0.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>2021-07-27</td>\n",
        "      <td>1.2813</td>\n",
        "      <td>2.9124</td>\n",
        "      <td>-3.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>4</th>\n",
        "      <td>2021-07-26</td>\n",
        "      <td>1.3292</td>\n",
        "      <td>2.9603</td>\n",
        "      <td>-7.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2021-07-23</td>\n",
-       "      <td>1.4329</td>\n",
-       "      <td>3.0640</td>\n",
-       "      <td>-2.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2021-07-22</td>\n",
-       "      <td>1.4665</td>\n",
-       "      <td>3.0976</td>\n",
-       "      <td>-1.95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2021-07-21</td>\n",
-       "      <td>1.4956</td>\n",
-       "      <td>3.1267</td>\n",
-       "      <td>-0.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -349,35 +349,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1500</th>\n",
+       "      <th>1503</th>\n",
        "      <td>2015-06-08</td>\n",
        "      <td>1.0380</td>\n",
        "      <td>1.0380</td>\n",
        "      <td>2.5692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1501</th>\n",
+       "      <th>1504</th>\n",
        "      <td>2015-06-05</td>\n",
        "      <td>1.0120</td>\n",
        "      <td>1.0120</td>\n",
        "      <td>1.5045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1502</th>\n",
+       "      <th>1505</th>\n",
        "      <td>2015-06-04</td>\n",
        "      <td>0.9970</td>\n",
        "      <td>0.9970</td>\n",
        "      <td>--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1503</th>\n",
+       "      <th>1506</th>\n",
        "      <td>2015-05-29</td>\n",
        "      <td>0.9950</td>\n",
        "      <td>0.9950</td>\n",
        "      <td>--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1504</th>\n",
+       "      <th>1507</th>\n",
        "      <td>2015-05-27</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>1.0000</td>\n",
@@ -385,7 +385,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1505 rows × 4 columns</p>\n",
+       "<p>1508 rows × 4 columns</p>\n",
        "</div>"
       ]
      },
@@ -413,9 +413,17 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "     基金代码              名称  估算涨跌幅              估算时间\n",
-       "0  161725  招商中证白酒指数(LOF)A  -3.74  2021-07-27 15:00\n",
-       "1  005827       易方达蓝筹精选混合  -5.87  2021-07-27 15:00"
+       "     基金代码            基金名称       PDATE     NAV  ACCNAV  NAVCHGRT     GSZ  \\\n",
+       "0  161725  招商中证白酒指数(LOF)A  2021-07-30  1.1959  2.8270     -6.03  1.1950   \n",
+       "1  005827       易方达蓝筹精选混合  2021-07-30  2.4967  2.4967     -2.98  2.4669   \n",
+       "\n",
+       "   估算涨跌幅              估算时间 NEWPRICE CHANGERATIO     ZJL               HQDATE  \\\n",
+       "0  -6.10  2021-07-30 15:00    1.225       -4.07 -2.4333  2021-07-30 15:34:03   \n",
+       "1  -4.14  2021-07-30 15:00       --          --      --                   --   \n",
+       "\n",
+       "   ISHAVEREDPACKET  \n",
+       "0            False  \n",
+       "1            False  "
       ],
       "text/html": [
        "<div>\n",
@@ -437,9 +445,19 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>基金代码</th>\n",
-       "      <th>名称</th>\n",
+       "      <th>基金名称</th>\n",
+       "      <th>PDATE</th>\n",
+       "      <th>NAV</th>\n",
+       "      <th>ACCNAV</th>\n",
+       "      <th>NAVCHGRT</th>\n",
+       "      <th>GSZ</th>\n",
        "      <th>估算涨跌幅</th>\n",
        "      <th>估算时间</th>\n",
+       "      <th>NEWPRICE</th>\n",
+       "      <th>CHANGERATIO</th>\n",
+       "      <th>ZJL</th>\n",
+       "      <th>HQDATE</th>\n",
+       "      <th>ISHAVEREDPACKET</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -447,15 +465,35 @@
        "      <th>0</th>\n",
        "      <td>161725</td>\n",
        "      <td>招商中证白酒指数(LOF)A</td>\n",
-       "      <td>-3.74</td>\n",
-       "      <td>2021-07-27 15:00</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>1.1959</td>\n",
+       "      <td>2.8270</td>\n",
+       "      <td>-6.03</td>\n",
+       "      <td>1.1950</td>\n",
+       "      <td>-6.10</td>\n",
+       "      <td>2021-07-30 15:00</td>\n",
+       "      <td>1.225</td>\n",
+       "      <td>-4.07</td>\n",
+       "      <td>-2.4333</td>\n",
+       "      <td>2021-07-30 15:34:03</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>005827</td>\n",
        "      <td>易方达蓝筹精选混合</td>\n",
-       "      <td>-5.87</td>\n",
-       "      <td>2021-07-27 15:00</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>2.4967</td>\n",
+       "      <td>2.4967</td>\n",
+       "      <td>-2.98</td>\n",
+       "      <td>2.4669</td>\n",
+       "      <td>-4.14</td>\n",
+       "      <td>2021-07-30 15:00</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -490,14 +528,14 @@
        "      基金代码              行业名称   持仓比例        公布日期              市值\n",
        "0   161725               制造业  93.07  2021-06-30  6492580.019556\n",
        "1   161725               金融业   0.01  2021-06-30      485.060688\n",
-       "2   161725          农、林、牧、渔业    0.0  2021-06-30        0.585078\n",
-       "3   161725  电力、热力、燃气及水生产和供应业    0.0  2021-06-30        1.302039\n",
-       "4   161725               建筑业    0.0  2021-06-30        2.537137\n",
-       "5   161725            批发和零售业    0.0  2021-06-30        5.888394\n",
-       "6   161725   信息传输、软件和信息技术服务业    0.0  2021-06-30      157.037536\n",
-       "7   161725     水利、环境和公共设施管理业    0.0  2021-06-30        4.443833\n",
-       "8   161725                教育    0.0  2021-06-30        1.626203\n",
-       "9   161725        科学研究和技术服务业    0.0  2021-06-30        48.30805\n",
+       "2   161725          农、林、牧、渔业      0  2021-06-30        0.585078\n",
+       "3   161725  电力、热力、燃气及水生产和供应业      0  2021-06-30        1.302039\n",
+       "4   161725               建筑业      0  2021-06-30        2.537137\n",
+       "5   161725            批发和零售业      0  2021-06-30        5.888394\n",
+       "6   161725   信息传输、软件和信息技术服务业      0  2021-06-30      157.037536\n",
+       "7   161725     水利、环境和公共设施管理业      0  2021-06-30        4.443833\n",
+       "8   161725                教育      0  2021-06-30        1.626203\n",
+       "9   161725        科学研究和技术服务业      0  2021-06-30        48.30805\n",
        "10  161725               采矿业     --  2021-06-30              --\n",
        "11  161725       交通运输、仓储和邮政业     --  2021-06-30              --\n",
        "12  161725            住宿和餐饮业     --  2021-06-30              --\n",
@@ -556,7 +594,7 @@
        "      <th>2</th>\n",
        "      <td>161725</td>\n",
        "      <td>农、林、牧、渔业</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>0.585078</td>\n",
        "    </tr>\n",
@@ -564,7 +602,7 @@
        "      <th>3</th>\n",
        "      <td>161725</td>\n",
        "      <td>电力、热力、燃气及水生产和供应业</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>1.302039</td>\n",
        "    </tr>\n",
@@ -572,7 +610,7 @@
        "      <th>4</th>\n",
        "      <td>161725</td>\n",
        "      <td>建筑业</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>2.537137</td>\n",
        "    </tr>\n",
@@ -580,7 +618,7 @@
        "      <th>5</th>\n",
        "      <td>161725</td>\n",
        "      <td>批发和零售业</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>5.888394</td>\n",
        "    </tr>\n",
@@ -588,7 +626,7 @@
        "      <th>6</th>\n",
        "      <td>161725</td>\n",
        "      <td>信息传输、软件和信息技术服务业</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>157.037536</td>\n",
        "    </tr>\n",
@@ -596,7 +634,7 @@
        "      <th>7</th>\n",
        "      <td>161725</td>\n",
        "      <td>水利、环境和公共设施管理业</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>4.443833</td>\n",
        "    </tr>\n",
@@ -604,7 +642,7 @@
        "      <th>8</th>\n",
        "      <td>161725</td>\n",
        "      <td>教育</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>1.626203</td>\n",
        "    </tr>\n",
@@ -612,7 +650,7 @@
        "      <th>9</th>\n",
        "      <td>161725</td>\n",
        "      <td>科学研究和技术服务业</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2021-06-30</td>\n",
        "      <td>48.30805</td>\n",
        "    </tr>\n",
